parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    UNARIO

Grammar

Rule 0     S' -> init
Rule 1     init -> globales
Rule 2     init -> empty
Rule 3     globales -> globales iglobal
Rule 4     globales -> iglobal
Rule 5     iglobal -> funcion
Rule 6     iglobal -> declaracion PTCOMA
Rule 7     iglobal -> definicion_struct
Rule 8     definicion_struct -> STRUCT ID LLAVIZQ declaraciones LLAVDER PTCOMA
Rule 9     declaraciones -> declaraciones declaracion PTCOMA
Rule 10    declaraciones -> declaracion PTCOMA
Rule 11    empty -> <empty>
Rule 12    funcion -> TIPO ID PARIZQ PARDER LLAVIZQ instrucciones LLAVDER
Rule 13    funcion -> TIPO ID PARIZQ parametros PARDER LLAVIZQ instrucciones LLAVDER
Rule 14    parametros -> parametros COMA parametro
Rule 15    parametros -> parametro
Rule 16    parametro -> TIPO ID
Rule 17    instrucciones -> instrucciones instruccion
Rule 18    instrucciones -> instruccion
Rule 19    instruccion -> imprimir_instr
Rule 20    instruccion -> asignacion PTCOMA
Rule 21    instruccion -> declaracion PTCOMA
Rule 22    instruccion -> sentencia_if
Rule 23    instruccion -> sentencia_switch
Rule 24    instruccion -> ins_break
Rule 25    instruccion -> ins_while
Rule 26    instruccion -> ins_for
Rule 27    instruccion -> ins_continue
Rule 28    instruccion -> ins_etiqueta
Rule 29    instruccion -> ins_goto
Rule 30    instruccion -> declaracion_struct PTCOMA
Rule 31    instruccion -> llamada PTCOMA
Rule 32    instruccion -> ins_return
Rule 33    instruccion -> error
Rule 34    llamada -> ID PARIZQ expresiones PARDER
Rule 35    llamada -> ID PARIZQ PARDER
Rule 36    ins_return -> RETURN expresion PTCOMA
Rule 37    declaracion_struct -> STRUCT ID lista_id
Rule 38    asignacion -> acceso_struct IGUAL expresion
Rule 39    asignacion -> acceso_struct IGUAL PARIZQ TIPO_DATO PARDER expresion
Rule 40    acceso_struct -> tipo_var PUNTO tipo_var
Rule 41    ins_etiqueta -> ID DOSP
Rule 42    ins_goto -> GOTO ID PTCOMA
Rule 43    ins_for -> FOR PARIZQ instruccion_for PTCOMA expresion PTCOMA asignacion PARDER LLAVIZQ instrucciones LLAVDER
Rule 44    instruccion_for -> asignacion
Rule 45    instruccion_for -> declaracion
Rule 46    ins_while -> WHILE PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER
Rule 47    ins_while -> DO LLAVIZQ instrucciones LLAVDER WHILE PARIZQ expresion PARDER PTCOMA
Rule 48    ins_continue -> CONTINUE PTCOMA
Rule 49    sentencia_switch -> SWITCH PARIZQ expresion PARDER LLAVIZQ lista_case default_ins LLAVDER
Rule 50    sentencia_switch -> SWITCH PARIZQ expresion PARDER LLAVIZQ lista_case LLAVDER
Rule 51    lista_case -> lista_case caso
Rule 52    lista_case -> caso
Rule 53    caso -> CASE expresion DOSP instrucciones
Rule 54    caso -> CASE expresion DOSP
Rule 55    default_ins -> DEFAULT DOSP instrucciones
Rule 56    default_ins -> DEFAULT DOSP
Rule 57    ins_break -> BREAK PTCOMA
Rule 58    sentencia_if -> IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER
Rule 59    sentencia_if -> IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER
Rule 60    sentencia_if -> IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER lelseif ELSE LLAVIZQ instrucciones LLAVDER
Rule 61    sentencia_if -> IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER lelseif
Rule 62    lelseif -> lelseif elseif
Rule 63    lelseif -> elseif
Rule 64    elseif -> ELSE IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER
Rule 65    imprimir_instr -> IMPRIMIR PARIZQ CADENA COMA expresiones PARDER PTCOMA
Rule 66    imprimir_instr -> IMPRIMIR PARIZQ CADENA PARDER PTCOMA
Rule 67    asignacion -> ID IGUAL expresion
Rule 68    asignacion -> ID IGUAL PARIZQ TIPO_DATO PARDER expresion
Rule 69    asignacion -> acceso_lista IGUAL expresion
Rule 70    asignacion -> acceso_lista IGUAL PARIZQ TIPO_DATO PARDER expresion
Rule 71    asignacion -> ID IGUAL SCAN PARIZQ PARDER
Rule 72    asignacion -> ID MAS MAS
Rule 73    asignacion -> ID MENOS MENOS
Rule 74    asignacion -> ID ASUMA expresion
Rule 75    asignacion -> ID ARESTA expresion
Rule 76    asignacion -> ID MULTIPLICATIVA expresion
Rule 77    asignacion -> ID DIVIDIDA expresion
Rule 78    asignacion -> ID ARESTO expresion
Rule 79    asignacion -> ID ABOR expresion
Rule 80    asignacion -> ID APAND expresion
Rule 81    asignacion -> ID ASHIFTD expresion
Rule 82    asignacion -> ID ASHIFTI expresion
Rule 83    asignacion -> ID AXORR expresion
Rule 84    accesos -> accesos acceso
Rule 85    accesos -> acceso
Rule 86    acceso -> CORIZQ expresion CORDER
Rule 87    acceso_lista -> ID accesos
Rule 88    acceso_lista -> STRUCT ID accesos
Rule 89    declaracion -> TIPO lista_id
Rule 90    declaracion -> TIPO lista_id IGUAL expresion
Rule 91    declaracion -> TIPO lista_id IGUAL SCAN PARIZQ PARDER
Rule 92    lista_id -> lista_id COMA tipo_var
Rule 93    lista_id -> tipo_var
Rule 94    tipo_var -> ID
Rule 95    tipo_var -> acceso_lista
Rule 96    TIPO_DATO -> INT
Rule 97    TIPO_DATO -> FLOAT
Rule 98    TIPO_DATO -> CHAR
Rule 99    TIPO_DATO -> DOOBLE
Rule 100   TIPO_DATO -> VOID
Rule 101   TIPO -> INT
Rule 102   TIPO -> FLOAT
Rule 103   TIPO -> CHAR
Rule 104   TIPO -> DOOBLE
Rule 105   TIPO -> VOID
Rule 106   expresiones -> expresiones COMA expresion
Rule 107   expresiones -> expresion
Rule 108   expresion -> primitiva
Rule 109   expresion -> expresion_numerica
Rule 110   expresion -> expresion_relacional
Rule 111   expresion -> expresion_unaria
Rule 112   expresion -> expresion_logica
Rule 113   expresion -> expresion_bit_bit
Rule 114   expresion -> PARIZQ expresion PARDER
Rule 115   expresion_unaria -> MENOS expresion
Rule 116   expresion_logica -> expresion AND expresion
Rule 117   expresion_logica -> expresion OR expresion
Rule 118   expresion_logica -> expresion XOR expresion
Rule 119   expresion_logica -> NOT expresion
Rule 120   expresion_bit_bit -> expresion PAND expresion
Rule 121   expresion_bit_bit -> expresion BOR expresion
Rule 122   expresion_bit_bit -> expresion XORR expresion
Rule 123   expresion_bit_bit -> expresion SHIFTI expresion
Rule 124   expresion_bit_bit -> expresion SHIFTD expresion
Rule 125   expresion_bit_bit -> NOTR expresion
Rule 126   expresion_relacional -> expresion MENQUE expresion
Rule 127   expresion_relacional -> expresion MAYQUE expresion
Rule 128   expresion_relacional -> expresion MEIQUE expresion
Rule 129   expresion_relacional -> expresion MAIQUE expresion
Rule 130   expresion_relacional -> expresion IGUALQUE expresion
Rule 131   expresion_relacional -> expresion NIGUALQUE expresion
Rule 132   expresion_numerica -> expresion MAS expresion
Rule 133   expresion_numerica -> expresion MENOS expresion
Rule 134   expresion_numerica -> expresion POR expresion
Rule 135   expresion_numerica -> expresion DIVIDIDO expresion
Rule 136   expresion_numerica -> expresion RESTO expresion
Rule 137   primitiva -> ENTERO
Rule 138   primitiva -> DECIMAL
Rule 139   primitiva -> CADENA
Rule 140   primitiva -> CADENAR_CHAR
Rule 141   primitiva -> ID
Rule 142   primitiva -> acceso_struct
Rule 143   primitiva -> llamada
Rule 144   primitiva -> acceso_lista
Rule 145   primitiva -> array
Rule 146   array -> LLAVIZQ expresiones LLAVDER

Terminals, with rules where they appear

ABOR                 : 79
AND                  : 116
APAND                : 80
ARESTA               : 75
ARESTO               : 78
ASHIFTD              : 81
ASHIFTI              : 82
ASUMA                : 74
AXORR                : 83
BOR                  : 121
BREAK                : 57
CADENA               : 65 66 139
CADENAR_CHAR         : 140
CASE                 : 53 54
CHAR                 : 98 103
COMA                 : 14 65 92 106
CONTINUE             : 48
CORDER               : 86
CORIZQ               : 86
DECIMAL              : 138
DEFAULT              : 55 56
DIVIDIDA             : 77
DIVIDIDO             : 135
DO                   : 47
DOOBLE               : 99 104
DOSP                 : 41 53 54 55 56
ELSE                 : 59 60 64
ENTERO               : 137
FLOAT                : 97 102
FOR                  : 43
GOTO                 : 42
ID                   : 8 12 13 16 34 35 37 41 42 67 68 71 72 73 74 75 76 77 78 79 80 81 82 83 87 88 94 141
IF                   : 58 59 60 61 64
IGUAL                : 38 39 67 68 69 70 71 90 91
IGUALQUE             : 130
IMPRIMIR             : 65 66
INT                  : 96 101
LLAVDER              : 8 12 13 43 46 47 49 50 58 59 59 60 60 61 64 146
LLAVIZQ              : 8 12 13 43 46 47 49 50 58 59 59 60 60 61 64 146
MAIQUE               : 129
MAS                  : 72 72 132
MAYQUE               : 127
MEIQUE               : 128
MENOS                : 73 73 115 133
MENQUE               : 126
MULTIPLICATIVA       : 76
NIGUALQUE            : 131
NOT                  : 119
NOTR                 : 125
OR                   : 117
PAND                 : 120
PARDER               : 12 13 34 35 39 43 46 47 49 50 58 59 60 61 64 65 66 68 70 71 91 114
PARIZQ               : 12 13 34 35 39 43 46 47 49 50 58 59 60 61 64 65 66 68 70 71 91 114
POR                  : 134
PTCOMA               : 6 8 9 10 20 21 30 31 36 42 43 43 47 48 57 65 66
PUNTO                : 40
RESTO                : 136
RETURN               : 36
SCAN                 : 71 91
SHIFTD               : 124
SHIFTI               : 123
STRUCT               : 8 37 88
SWITCH               : 49 50
UNARIO               : 
VOID                 : 100 105
WHILE                : 46 47
XOR                  : 118
XORR                 : 122
error                : 33

Nonterminals, with rules where they appear

TIPO                 : 12 13 16 89 90 91
TIPO_DATO            : 39 68 70
acceso               : 84 85
acceso_lista         : 69 70 95 144
acceso_struct        : 38 39 142
accesos              : 84 87 88
array                : 145
asignacion           : 20 43 44
caso                 : 51 52
declaracion          : 6 9 10 21 45
declaracion_struct   : 30
declaraciones        : 8 9
default_ins          : 49
definicion_struct    : 7
elseif               : 62 63
empty                : 2
expresion            : 36 38 39 43 46 47 49 50 53 54 58 59 60 61 64 67 68 69 70 74 75 76 77 78 79 80 81 82 83 86 90 106 107 114 115 116 116 117 117 118 118 119 120 120 121 121 122 122 123 123 124 124 125 126 126 127 127 128 128 129 129 130 130 131 131 132 132 133 133 134 134 135 135 136 136
expresion_bit_bit    : 113
expresion_logica     : 112
expresion_numerica   : 109
expresion_relacional : 110
expresion_unaria     : 111
expresiones          : 34 65 106 146
funcion              : 5
globales             : 1 3
iglobal              : 3 4
imprimir_instr       : 19
init                 : 0
ins_break            : 24
ins_continue         : 27
ins_etiqueta         : 28
ins_for              : 26
ins_goto             : 29
ins_return           : 32
ins_while            : 25
instruccion          : 17 18
instruccion_for      : 43
instrucciones        : 12 13 17 43 46 47 53 55 58 59 59 60 60 61 64
lelseif              : 60 61 62
lista_case           : 49 50 51
lista_id             : 37 89 90 91 92
llamada              : 31 143
parametro            : 14 15
parametros           : 13 14
primitiva            : 108
sentencia_if         : 22
sentencia_switch     : 23
tipo_var             : 40 40 92 93

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . globales
    (2) init -> . empty
    (3) globales -> . globales iglobal
    (4) globales -> . iglobal
    (11) empty -> .
    (5) iglobal -> . funcion
    (6) iglobal -> . declaracion PTCOMA
    (7) iglobal -> . definicion_struct
    (12) funcion -> . TIPO ID PARIZQ PARDER LLAVIZQ instrucciones LLAVDER
    (13) funcion -> . TIPO ID PARIZQ parametros PARDER LLAVIZQ instrucciones LLAVDER
    (89) declaracion -> . TIPO lista_id
    (90) declaracion -> . TIPO lista_id IGUAL expresion
    (91) declaracion -> . TIPO lista_id IGUAL SCAN PARIZQ PARDER
    (8) definicion_struct -> . STRUCT ID LLAVIZQ declaraciones LLAVDER PTCOMA
    (101) TIPO -> . INT
    (102) TIPO -> . FLOAT
    (103) TIPO -> . CHAR
    (104) TIPO -> . DOOBLE
    (105) TIPO -> . VOID

    $end            reduce using rule 11 (empty -> .)
    STRUCT          shift and go to state 9
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    CHAR            shift and go to state 12
    DOOBLE          shift and go to state 13
    VOID            shift and go to state 14

    init                           shift and go to state 1
    globales                       shift and go to state 2
    empty                          shift and go to state 3
    iglobal                        shift and go to state 4
    funcion                        shift and go to state 5
    declaracion                    shift and go to state 6
    definicion_struct              shift and go to state 7
    TIPO                           shift and go to state 8

state 1

    (0) S' -> init .



state 2

    (1) init -> globales .
    (3) globales -> globales . iglobal
    (5) iglobal -> . funcion
    (6) iglobal -> . declaracion PTCOMA
    (7) iglobal -> . definicion_struct
    (12) funcion -> . TIPO ID PARIZQ PARDER LLAVIZQ instrucciones LLAVDER
    (13) funcion -> . TIPO ID PARIZQ parametros PARDER LLAVIZQ instrucciones LLAVDER
    (89) declaracion -> . TIPO lista_id
    (90) declaracion -> . TIPO lista_id IGUAL expresion
    (91) declaracion -> . TIPO lista_id IGUAL SCAN PARIZQ PARDER
    (8) definicion_struct -> . STRUCT ID LLAVIZQ declaraciones LLAVDER PTCOMA
    (101) TIPO -> . INT
    (102) TIPO -> . FLOAT
    (103) TIPO -> . CHAR
    (104) TIPO -> . DOOBLE
    (105) TIPO -> . VOID

    $end            reduce using rule 1 (init -> globales .)
    STRUCT          shift and go to state 9
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    CHAR            shift and go to state 12
    DOOBLE          shift and go to state 13
    VOID            shift and go to state 14

    iglobal                        shift and go to state 15
    funcion                        shift and go to state 5
    declaracion                    shift and go to state 6
    definicion_struct              shift and go to state 7
    TIPO                           shift and go to state 8

state 3

    (2) init -> empty .

    $end            reduce using rule 2 (init -> empty .)


state 4

    (4) globales -> iglobal .

    STRUCT          reduce using rule 4 (globales -> iglobal .)
    INT             reduce using rule 4 (globales -> iglobal .)
    FLOAT           reduce using rule 4 (globales -> iglobal .)
    CHAR            reduce using rule 4 (globales -> iglobal .)
    DOOBLE          reduce using rule 4 (globales -> iglobal .)
    VOID            reduce using rule 4 (globales -> iglobal .)
    $end            reduce using rule 4 (globales -> iglobal .)


state 5

    (5) iglobal -> funcion .

    STRUCT          reduce using rule 5 (iglobal -> funcion .)
    INT             reduce using rule 5 (iglobal -> funcion .)
    FLOAT           reduce using rule 5 (iglobal -> funcion .)
    CHAR            reduce using rule 5 (iglobal -> funcion .)
    DOOBLE          reduce using rule 5 (iglobal -> funcion .)
    VOID            reduce using rule 5 (iglobal -> funcion .)
    $end            reduce using rule 5 (iglobal -> funcion .)


state 6

    (6) iglobal -> declaracion . PTCOMA

    PTCOMA          shift and go to state 16


state 7

    (7) iglobal -> definicion_struct .

    STRUCT          reduce using rule 7 (iglobal -> definicion_struct .)
    INT             reduce using rule 7 (iglobal -> definicion_struct .)
    FLOAT           reduce using rule 7 (iglobal -> definicion_struct .)
    CHAR            reduce using rule 7 (iglobal -> definicion_struct .)
    DOOBLE          reduce using rule 7 (iglobal -> definicion_struct .)
    VOID            reduce using rule 7 (iglobal -> definicion_struct .)
    $end            reduce using rule 7 (iglobal -> definicion_struct .)


state 8

    (12) funcion -> TIPO . ID PARIZQ PARDER LLAVIZQ instrucciones LLAVDER
    (13) funcion -> TIPO . ID PARIZQ parametros PARDER LLAVIZQ instrucciones LLAVDER
    (89) declaracion -> TIPO . lista_id
    (90) declaracion -> TIPO . lista_id IGUAL expresion
    (91) declaracion -> TIPO . lista_id IGUAL SCAN PARIZQ PARDER
    (92) lista_id -> . lista_id COMA tipo_var
    (93) lista_id -> . tipo_var
    (94) tipo_var -> . ID
    (95) tipo_var -> . acceso_lista
    (87) acceso_lista -> . ID accesos
    (88) acceso_lista -> . STRUCT ID accesos

    ID              shift and go to state 17
    STRUCT          shift and go to state 21

    lista_id                       shift and go to state 18
    tipo_var                       shift and go to state 19
    acceso_lista                   shift and go to state 20

state 9

    (8) definicion_struct -> STRUCT . ID LLAVIZQ declaraciones LLAVDER PTCOMA

    ID              shift and go to state 22


state 10

    (101) TIPO -> INT .

    ID              reduce using rule 101 (TIPO -> INT .)
    STRUCT          reduce using rule 101 (TIPO -> INT .)


state 11

    (102) TIPO -> FLOAT .

    ID              reduce using rule 102 (TIPO -> FLOAT .)
    STRUCT          reduce using rule 102 (TIPO -> FLOAT .)


state 12

    (103) TIPO -> CHAR .

    ID              reduce using rule 103 (TIPO -> CHAR .)
    STRUCT          reduce using rule 103 (TIPO -> CHAR .)


state 13

    (104) TIPO -> DOOBLE .

    ID              reduce using rule 104 (TIPO -> DOOBLE .)
    STRUCT          reduce using rule 104 (TIPO -> DOOBLE .)


state 14

    (105) TIPO -> VOID .

    ID              reduce using rule 105 (TIPO -> VOID .)
    STRUCT          reduce using rule 105 (TIPO -> VOID .)


state 15

    (3) globales -> globales iglobal .

    STRUCT          reduce using rule 3 (globales -> globales iglobal .)
    INT             reduce using rule 3 (globales -> globales iglobal .)
    FLOAT           reduce using rule 3 (globales -> globales iglobal .)
    CHAR            reduce using rule 3 (globales -> globales iglobal .)
    DOOBLE          reduce using rule 3 (globales -> globales iglobal .)
    VOID            reduce using rule 3 (globales -> globales iglobal .)
    $end            reduce using rule 3 (globales -> globales iglobal .)


state 16

    (6) iglobal -> declaracion PTCOMA .

    STRUCT          reduce using rule 6 (iglobal -> declaracion PTCOMA .)
    INT             reduce using rule 6 (iglobal -> declaracion PTCOMA .)
    FLOAT           reduce using rule 6 (iglobal -> declaracion PTCOMA .)
    CHAR            reduce using rule 6 (iglobal -> declaracion PTCOMA .)
    DOOBLE          reduce using rule 6 (iglobal -> declaracion PTCOMA .)
    VOID            reduce using rule 6 (iglobal -> declaracion PTCOMA .)
    $end            reduce using rule 6 (iglobal -> declaracion PTCOMA .)


state 17

    (12) funcion -> TIPO ID . PARIZQ PARDER LLAVIZQ instrucciones LLAVDER
    (13) funcion -> TIPO ID . PARIZQ parametros PARDER LLAVIZQ instrucciones LLAVDER
    (94) tipo_var -> ID .
    (87) acceso_lista -> ID . accesos
    (84) accesos -> . accesos acceso
    (85) accesos -> . acceso
    (86) acceso -> . CORIZQ expresion CORDER

    PARIZQ          shift and go to state 23
    IGUAL           reduce using rule 94 (tipo_var -> ID .)
    COMA            reduce using rule 94 (tipo_var -> ID .)
    PTCOMA          reduce using rule 94 (tipo_var -> ID .)
    CORIZQ          shift and go to state 26

    accesos                        shift and go to state 24
    acceso                         shift and go to state 25

state 18

    (89) declaracion -> TIPO lista_id .
    (90) declaracion -> TIPO lista_id . IGUAL expresion
    (91) declaracion -> TIPO lista_id . IGUAL SCAN PARIZQ PARDER
    (92) lista_id -> lista_id . COMA tipo_var

    PTCOMA          reduce using rule 89 (declaracion -> TIPO lista_id .)
    IGUAL           shift and go to state 27
    COMA            shift and go to state 28


state 19

    (93) lista_id -> tipo_var .

    IGUAL           reduce using rule 93 (lista_id -> tipo_var .)
    COMA            reduce using rule 93 (lista_id -> tipo_var .)
    PTCOMA          reduce using rule 93 (lista_id -> tipo_var .)


state 20

    (95) tipo_var -> acceso_lista .

    IGUAL           reduce using rule 95 (tipo_var -> acceso_lista .)
    COMA            reduce using rule 95 (tipo_var -> acceso_lista .)
    PTCOMA          reduce using rule 95 (tipo_var -> acceso_lista .)
    CORDER          reduce using rule 95 (tipo_var -> acceso_lista .)
    MAS             reduce using rule 95 (tipo_var -> acceso_lista .)
    MENOS           reduce using rule 95 (tipo_var -> acceso_lista .)
    POR             reduce using rule 95 (tipo_var -> acceso_lista .)
    DIVIDIDO        reduce using rule 95 (tipo_var -> acceso_lista .)
    RESTO           reduce using rule 95 (tipo_var -> acceso_lista .)
    MENQUE          reduce using rule 95 (tipo_var -> acceso_lista .)
    MAYQUE          reduce using rule 95 (tipo_var -> acceso_lista .)
    MEIQUE          reduce using rule 95 (tipo_var -> acceso_lista .)
    MAIQUE          reduce using rule 95 (tipo_var -> acceso_lista .)
    IGUALQUE        reduce using rule 95 (tipo_var -> acceso_lista .)
    NIGUALQUE       reduce using rule 95 (tipo_var -> acceso_lista .)
    AND             reduce using rule 95 (tipo_var -> acceso_lista .)
    OR              reduce using rule 95 (tipo_var -> acceso_lista .)
    XOR             reduce using rule 95 (tipo_var -> acceso_lista .)
    PAND            reduce using rule 95 (tipo_var -> acceso_lista .)
    BOR             reduce using rule 95 (tipo_var -> acceso_lista .)
    XORR            reduce using rule 95 (tipo_var -> acceso_lista .)
    SHIFTI          reduce using rule 95 (tipo_var -> acceso_lista .)
    SHIFTD          reduce using rule 95 (tipo_var -> acceso_lista .)
    PARDER          reduce using rule 95 (tipo_var -> acceso_lista .)
    LLAVDER         reduce using rule 95 (tipo_var -> acceso_lista .)
    DOSP            reduce using rule 95 (tipo_var -> acceso_lista .)


state 21

    (88) acceso_lista -> STRUCT . ID accesos

    ID              shift and go to state 29


state 22

    (8) definicion_struct -> STRUCT ID . LLAVIZQ declaraciones LLAVDER PTCOMA

    LLAVIZQ         shift and go to state 30


state 23

    (12) funcion -> TIPO ID PARIZQ . PARDER LLAVIZQ instrucciones LLAVDER
    (13) funcion -> TIPO ID PARIZQ . parametros PARDER LLAVIZQ instrucciones LLAVDER
    (14) parametros -> . parametros COMA parametro
    (15) parametros -> . parametro
    (16) parametro -> . TIPO ID
    (101) TIPO -> . INT
    (102) TIPO -> . FLOAT
    (103) TIPO -> . CHAR
    (104) TIPO -> . DOOBLE
    (105) TIPO -> . VOID

    PARDER          shift and go to state 32
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    CHAR            shift and go to state 12
    DOOBLE          shift and go to state 13
    VOID            shift and go to state 14

    TIPO                           shift and go to state 31
    parametros                     shift and go to state 33
    parametro                      shift and go to state 34

state 24

    (87) acceso_lista -> ID accesos .
    (84) accesos -> accesos . acceso
    (86) acceso -> . CORIZQ expresion CORDER

    IGUAL           reduce using rule 87 (acceso_lista -> ID accesos .)
    COMA            reduce using rule 87 (acceso_lista -> ID accesos .)
    PTCOMA          reduce using rule 87 (acceso_lista -> ID accesos .)
    CORDER          reduce using rule 87 (acceso_lista -> ID accesos .)
    MAS             reduce using rule 87 (acceso_lista -> ID accesos .)
    MENOS           reduce using rule 87 (acceso_lista -> ID accesos .)
    POR             reduce using rule 87 (acceso_lista -> ID accesos .)
    DIVIDIDO        reduce using rule 87 (acceso_lista -> ID accesos .)
    RESTO           reduce using rule 87 (acceso_lista -> ID accesos .)
    MENQUE          reduce using rule 87 (acceso_lista -> ID accesos .)
    MAYQUE          reduce using rule 87 (acceso_lista -> ID accesos .)
    MEIQUE          reduce using rule 87 (acceso_lista -> ID accesos .)
    MAIQUE          reduce using rule 87 (acceso_lista -> ID accesos .)
    IGUALQUE        reduce using rule 87 (acceso_lista -> ID accesos .)
    NIGUALQUE       reduce using rule 87 (acceso_lista -> ID accesos .)
    AND             reduce using rule 87 (acceso_lista -> ID accesos .)
    OR              reduce using rule 87 (acceso_lista -> ID accesos .)
    XOR             reduce using rule 87 (acceso_lista -> ID accesos .)
    PAND            reduce using rule 87 (acceso_lista -> ID accesos .)
    BOR             reduce using rule 87 (acceso_lista -> ID accesos .)
    XORR            reduce using rule 87 (acceso_lista -> ID accesos .)
    SHIFTI          reduce using rule 87 (acceso_lista -> ID accesos .)
    SHIFTD          reduce using rule 87 (acceso_lista -> ID accesos .)
    PUNTO           reduce using rule 87 (acceso_lista -> ID accesos .)
    PARDER          reduce using rule 87 (acceso_lista -> ID accesos .)
    LLAVDER         reduce using rule 87 (acceso_lista -> ID accesos .)
    DOSP            reduce using rule 87 (acceso_lista -> ID accesos .)
    CORIZQ          shift and go to state 26

    acceso                         shift and go to state 35

state 25

    (85) accesos -> acceso .

    CORIZQ          reduce using rule 85 (accesos -> acceso .)
    IGUAL           reduce using rule 85 (accesos -> acceso .)
    COMA            reduce using rule 85 (accesos -> acceso .)
    PTCOMA          reduce using rule 85 (accesos -> acceso .)
    CORDER          reduce using rule 85 (accesos -> acceso .)
    MAS             reduce using rule 85 (accesos -> acceso .)
    MENOS           reduce using rule 85 (accesos -> acceso .)
    POR             reduce using rule 85 (accesos -> acceso .)
    DIVIDIDO        reduce using rule 85 (accesos -> acceso .)
    RESTO           reduce using rule 85 (accesos -> acceso .)
    MENQUE          reduce using rule 85 (accesos -> acceso .)
    MAYQUE          reduce using rule 85 (accesos -> acceso .)
    MEIQUE          reduce using rule 85 (accesos -> acceso .)
    MAIQUE          reduce using rule 85 (accesos -> acceso .)
    IGUALQUE        reduce using rule 85 (accesos -> acceso .)
    NIGUALQUE       reduce using rule 85 (accesos -> acceso .)
    AND             reduce using rule 85 (accesos -> acceso .)
    OR              reduce using rule 85 (accesos -> acceso .)
    XOR             reduce using rule 85 (accesos -> acceso .)
    PAND            reduce using rule 85 (accesos -> acceso .)
    BOR             reduce using rule 85 (accesos -> acceso .)
    XORR            reduce using rule 85 (accesos -> acceso .)
    SHIFTI          reduce using rule 85 (accesos -> acceso .)
    SHIFTD          reduce using rule 85 (accesos -> acceso .)
    PUNTO           reduce using rule 85 (accesos -> acceso .)
    PARDER          reduce using rule 85 (accesos -> acceso .)
    LLAVDER         reduce using rule 85 (accesos -> acceso .)
    DOSP            reduce using rule 85 (accesos -> acceso .)


state 26

    (86) acceso -> CORIZQ . expresion CORDER
    (108) expresion -> . primitiva
    (109) expresion -> . expresion_numerica
    (110) expresion -> . expresion_relacional
    (111) expresion -> . expresion_unaria
    (112) expresion -> . expresion_logica
    (113) expresion -> . expresion_bit_bit
    (114) expresion -> . PARIZQ expresion PARDER
    (137) primitiva -> . ENTERO
    (138) primitiva -> . DECIMAL
    (139) primitiva -> . CADENA
    (140) primitiva -> . CADENAR_CHAR
    (141) primitiva -> . ID
    (142) primitiva -> . acceso_struct
    (143) primitiva -> . llamada
    (144) primitiva -> . acceso_lista
    (145) primitiva -> . array
    (132) expresion_numerica -> . expresion MAS expresion
    (133) expresion_numerica -> . expresion MENOS expresion
    (134) expresion_numerica -> . expresion POR expresion
    (135) expresion_numerica -> . expresion DIVIDIDO expresion
    (136) expresion_numerica -> . expresion RESTO expresion
    (126) expresion_relacional -> . expresion MENQUE expresion
    (127) expresion_relacional -> . expresion MAYQUE expresion
    (128) expresion_relacional -> . expresion MEIQUE expresion
    (129) expresion_relacional -> . expresion MAIQUE expresion
    (130) expresion_relacional -> . expresion IGUALQUE expresion
    (131) expresion_relacional -> . expresion NIGUALQUE expresion
    (115) expresion_unaria -> . MENOS expresion
    (116) expresion_logica -> . expresion AND expresion
    (117) expresion_logica -> . expresion OR expresion
    (118) expresion_logica -> . expresion XOR expresion
    (119) expresion_logica -> . NOT expresion
    (120) expresion_bit_bit -> . expresion PAND expresion
    (121) expresion_bit_bit -> . expresion BOR expresion
    (122) expresion_bit_bit -> . expresion XORR expresion
    (123) expresion_bit_bit -> . expresion SHIFTI expresion
    (124) expresion_bit_bit -> . expresion SHIFTD expresion
    (125) expresion_bit_bit -> . NOTR expresion
    (40) acceso_struct -> . tipo_var PUNTO tipo_var
    (34) llamada -> . ID PARIZQ expresiones PARDER
    (35) llamada -> . ID PARIZQ PARDER
    (87) acceso_lista -> . ID accesos
    (88) acceso_lista -> . STRUCT ID accesos
    (146) array -> . LLAVIZQ expresiones LLAVDER
    (94) tipo_var -> . ID
    (95) tipo_var -> . acceso_lista

    PARIZQ          shift and go to state 43
    ENTERO          shift and go to state 44
    DECIMAL         shift and go to state 45
    CADENA          shift and go to state 46
    CADENAR_CHAR    shift and go to state 47
    ID              shift and go to state 48
    MENOS           shift and go to state 53
    NOT             shift and go to state 54
    NOTR            shift and go to state 55
    STRUCT          shift and go to state 21
    LLAVIZQ         shift and go to state 57

    expresion                      shift and go to state 36
    primitiva                      shift and go to state 37
    expresion_numerica             shift and go to state 38
    expresion_relacional           shift and go to state 39
    expresion_unaria               shift and go to state 40
    expresion_logica               shift and go to state 41
    expresion_bit_bit              shift and go to state 42
    acceso_struct                  shift and go to state 49
    llamada                        shift and go to state 50
    acceso_lista                   shift and go to state 51
    array                          shift and go to state 52
    tipo_var                       shift and go to state 56

state 27
